--- a/index.html
+++ b/index.html
@@ -24,9 +24,15 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
+            <div class="profile-photo">
+                <img src="profile.jpg" alt="P Sunil">
+            </div>
             <h1>Hi, I'm P Sunil</h1>
             <p>A final year graduate student with a keen interest in leveraging technical skills to solve complex problems.</p>
-            <a href="#projects" class="btn">View My Work</a>
+            <div class="hero-buttons">
+                <a href="#projects" class="btn btn-primary">View My Work</a>
+                <a href="resume.pdf" class="btn btn-secondary" download>Download Resume</a>
+            </div>
         </div>
     </section>
 
@@ -108,18 +114,6 @@
                     <p>A short description of Project 4, detailing the project's scope and the technical challenges overcome.</p>
                     <a href="#" class="project-link">View Project →</a>
                 </div>
-                <div class="project-card">
-                    <div class="project-number">05</div>
-                    <h3>Project 5</h3>
-                    <p>A short description of Project 5, focusing on innovation and impact.</p>
-                    <a href="#" class="project-link">View Project →</a>
-                </div>
-                <div class="project-card">
-                    <div class="project-number">06</div>
-                    <h3>Project 6</h3>
-                    <p>A short description of Project 6, with emphasis on technologies and learning outcomes.</p>
-                    <a href="#" class="project-link">View Project →</a>
-                </div>
             </div>
         </div>
     </section>
@@ -130,20 +124,34 @@
             <h2 class="section-title">Get In Touch</h2>
             <div class="contact-content">
                 <div class="contact-info">
-                    <div class="contact-item">
+                    <a href="mailto:psunill0108@gmail.com" class="contact-item">
                         <div class="contact-icon">📧</div>
                         <div>
                             <h3>Email</h3>
                             <p>psunill0108@gmail.com</p>
                         </div>
-                    </div>
-                    <div class="contact-item">
+                    </a>
+                    <a href="tel:+917032779160" class="contact-item">
                         <div class="contact-icon">📱</div>
                         <div>
                             <h3>Phone</h3>
                             <p>+91 7032779160</p>
                         </div>
-                    </div>
+                    </a>
+                    <a href="https://wa.me/917032779160" target="_blank" class="contact-item">
+                        <div class="contact-icon">💬</div>
+                        <div>
+                            <h3>WhatsApp</h3>
+                            <p>Chat on WhatsApp</p>
+                        </div>
+                    </a>
+                    <a href="https://linkedin.com/in/yourprofile" target="_blank" class="contact-item">
+                        <div class="contact-icon">💼</div>
+                        <div>
+                            <h3>LinkedIn</h3>
+                            <p>Connect with me</p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
